Fix overflow in code blocks

--- a/css/default.css
+++ b/css/default.css
@@ -24,6 +24,7 @@ p {
 
 pre {
     padding: 1em;
+    overflow-x: auto;
 }
 
 code, pre {
